[gd_scene load_steps=8 format=2]

[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Enemy/Enemy.tscn" type="PackedScene" id=2]
[ext_resource path="res://Ball/Ball.tscn" type="PackedScene" id=3]
[ext_resource path="res://Level/Level.gd" type="Script" id=4]
[ext_resource path="res://Assets/ping_pong_8bit_plop.ogg" type="AudioStream" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 640, 2 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 50, 360 )

[node name="Level" type="Node"]
script = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_left = 0.00110483
anchor_right = 1.0011
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ball" parent="." instance=ExtResource( 3 )]
position = Vector2( 640, 360 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 30, 360 )

[node name="Enemy" parent="." instance=ExtResource( 2 )]
position = Vector2( 1250, 360 )

[node name="Walls" type="StaticBody2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="Top" type="CollisionShape2D" parent="Walls"]
position = Vector2( 640, -5 )
shape = SubResource( 1 )

[node name="Bottom" type="CollisionShape2D" parent="Walls"]
position = Vector2( 640, 725 )
shape = SubResource( 1 )

[node name="Left" type="Area2D" parent="."]
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Left" type="CollisionShape2D" parent="Left"]
position = Vector2( -50, 360 )
shape = SubResource( 2 )

[node name="Right" type="Area2D" parent="."]
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Right" type="CollisionShape2D" parent="Right"]
position = Vector2( 1330, 360 )
shape = SubResource( 2 )

[node name="PlayerScore" type="Label" parent="."]
anchor_left = 0.00110486
anchor_right = 1.0011
anchor_bottom = 1.0
margin_left = -200.0
text = "Player score"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="EnemyScore" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 200.0
text = "Opponent  score"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="CountdownLabel" type="Label" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -100.0
margin_bottom = -100.0
size_flags_horizontal = 13
size_flags_vertical = 12
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
text = "Countdown"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CountdownTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="ScoreSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[connection signal="body_entered" from="Left" to="." method="_on_Left_body_entered"]
[connection signal="body_entered" from="Right" to="." method="_on_Right_body_entered"]
[connection signal="timeout" from="CountdownTimer" to="." method="_on_CountdownTImer_timeout"]
